clusters/default/infra/platform/ingress/notification-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-controller-ingress
  namespace: flux-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: |
      kube-system-infra-rate-limit@kubernetescrd,
      kube-system-infra-security-headers@kubernetescrd
  labels:
    app.kubernetes.io/name: notification-controller
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/managed-by: flux
spec:
  ingressClassName: traefik
  rules:
    - host: flux-webhook.kudofools.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
